# generate-payee-2307

./: .gitignore  README.md  pyproject.toml
app/: __main__.py  generate_path.py  payor_info.py  process.py  retrieve.py  utils.py  wtax_info.py  wtax_item.py
format/: 2307.xlsx  source_template.xlsx
